2015-09-10  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/conffile.h (no_yes_all_t, priority_t, execute_where_t):
	  New enum
	* common-src/conffile.c, server-src/amcheck.c, server-src/diskfile.c,
	  server-src/server_util.c: Use ne enum constants.
	* perl/Amanda/Config.swg: Add more function to return enum value
	* installcheck/Amanda_Config.pl: Add tests

2015-09-09  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/amglue/constants.swg (amglue_add_enum_and_string_tag_fns,
	  amglue_add_constant_and_string): New macro
	* perl/Amanda/Config.swg: Add functions to return enum value from a
	  string
	* installcheck/Amanda_Config.pl: Add tests

2015-09-09  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/driver.c (tape_action): Improvement

2015-09-09  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/dumper.c: Fix hang on failure

2015-09-03  Jean-Louis Martineau <martineau@zmanda.com>
	* ndmp-src/ndma_comm_dispatch.c: Send all LOG_MESSAGE
	* ndmp-src/ndmjob_main_util.c: Quote LOG_MESSAGE
	* perl/Amanda/Report/human.pm: Fix output

2015-09-01  Jean-Louis Martineau <martineau@zmanda.com>
	* rest-server/bin/app-dancer2.pl.in: Correctly load multiple
	  applications.
	* server-src/amanda-rest-server.pl: Always load the same Dancer2
	  script.

2015-08-31  Jean-Louis Martineau <martineau@zmanda.com>
	* patching file perl/Amanda/FetchDump.pm: Fix perl warning
	* patching file server-src/amcheck-device.pl: Fix
	* installcheck/Amanda_Rest_Amcheck.pl: Fix

2015-08-27  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/driver.c (tape_action): More improvement.

2015-08-27  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/planner.c: Improve message.

2015-08-24  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/amzfs-sendrecv.pl: Fix compratio parsing.

2015-08-20  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amcheck.c: Add the check_host_setting count in the